--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -40,6 +40,11 @@
       height: 3em;
       object-fit: cover;
     }
+
+    .gray {
+      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+      filter: grayscale(100%);
+    }
   </style>
   {% block script %}{% endblock %}
   {% block style %}{% endblock %}
