--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -24,6 +24,11 @@
           {% else %}
             <h5 class="text-muted">{{ member.get_role_display }}</h5>
           {% endif %}
+          {% if not member.active %}
+            <h5>
+              <span class="badge badge-dark">Inactive</span>
+            </h5>
+          {% endif %}
           {% if request.user.is_staff %}
             <a class="btn btn-secondary" href="{% url 'admin:teammanager_member_change' member.id %}">Edit</a>
           {% endif %}
