--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -24,7 +24,7 @@
           {% else %}
             <h5 class="text-muted">{{ member.get_role_display }}</h5>
           {% endif %}
-          {% if not member.active %}
+          {% if not member.active and member.role != "vip" %}
             <h5>
               <span class="badge badge-dark">Inactive</span>
             </h5>
