--- a/teammanager/bootstrap/scss/_variables.scss
+++ b/teammanager/bootstrap/scss/_variables.scss
@@ -72,7 +72,7 @@ $colors: map-merge(
 
 $primary: $green !default;
 $secondary: $orange !default;
-$success: $teal !default;
+$success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
