--- a/teammanager/templates/teammanager/teambuilding_question_select.html
+++ b/teammanager/templates/teammanager/teambuilding_question_select.html
@@ -22,6 +22,7 @@
               </div>
             </div>
             <button class="btn btn-primary" type="submit">Submit</button>
+            <a class="btn btn-danger" href="{% url 'man:teambuilding_select' %}?deactivate=1">Deactivate</a>
           </div>
         </form>
       </div>
