Fix question display for questions that don't have special text

--- a/teammanager/templates/teammanager/teambuilding_answers.html
+++ b/teammanager/templates/teammanager/teambuilding_answers.html
@@ -29,7 +29,7 @@
   <br>
   <div class="container-fluid">
     <h2 class="text-center">
-    <span>{{ question.question }}</span>
+    <span>{{ question.display }}</span>
     </h2><br>
     <div class="row mx-xl-5">
       <div class="col-sm-12 col-md-6">
