Add ability to see past tb responses

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -106,6 +106,7 @@
             {% else %}
               <a class="dropdown-item" href="{% url 'man:teambuilding_add' %}">Suggest a Question</a>
             {% endif %}
+            <a class="dropdown-item" href="{% url 'man:teambuilding_answers' %}">Answers</a>
           </div>
         </div>
       {% endif %}
