--- a/teammanager/templates/teammanager/teambuilding_answers.html
+++ b/teammanager/templates/teammanager/teambuilding_answers.html
@@ -28,11 +28,12 @@
   </style>
   <br>
   <div class="container-fluid">
-    <h2 class="text-center">
-    <span>{{ question.display }}</span>
-    </h2><br>
-    <div class="row mx-xl-5">
-      <div class="col-sm-12 col-md-6">
+    {% if question %}
+      <h2 class="text-center">
+        <span>{{ question.display }}</span>
+      </h2><br>
+      <div class="row mx-xl-5">
+        <div class="col-sm-12 col-md-6">
           <h3 class="text-center">
             {{ question.option_one }}
           </h3>
@@ -52,11 +53,11 @@
               {% endif %}
             {% endfor %}
           </div>
-        <div class="d-block d-sm-block d-md-none">
-          <hr>
+          <div class="d-block d-sm-block d-md-none">
+            <hr>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6">
           <h3 class="text-center">
             {{ question.option_two }}
           </h3>
@@ -77,10 +78,22 @@
               {% endif %}
             {% endfor %}
           </div>
-        <div class="d-block d-sm-block d-md-none">
-          <hr>
+          <div class="d-block d-sm-block d-md-none">
+            <hr>
+          </div>
         </div>
       </div>
-    </div>
+    {% else %}
+      <h2 class="text-center">There isn't a question active right now!</h2>
+    {% endif %}
+    {% if all_questions %}
+      <div class="text-center">
+        <h3 class="text-center">View Another Question:</h3>
+        {% for q in all_questions %}
+          <a href="{% url 'teammanager:teambuilding_answers' %}?q={{ q.id }}"
+             class="btn btn-primary mx-2 my-2">{{ q }}</a>
+        {% endfor %}
+      </div>
+    {% endif %}
   </div>
 {% endblock %}
