Show volunteer hours in member detail view

--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -41,6 +41,7 @@
               <div class="pl-4">
                 <h6><b>Build:</b> {{ hr_build }}</h6>
                 <h6><b>Outreach:</b> {{ hr_out }}</h6>
+                <h6><b>Volunteer:</b> {{ hr_vol }} </h6>
               </div>
               <div class="">
                 <hr>
