Adding of outreach events

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -114,7 +114,7 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                aria-expanded="false">Outreach</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Add Event</a>
+              <a class="dropdown-item" href="{% url 'man:outreach_event_add' %}">Add Event</a>
               <a class="dropdown-item" href="{% url 'man:outreach_hours_add' %}">Add Hours</a>
             </div>
           </div>
