--- a/teammanager/templates/teammanager/outreach_event_add.html
+++ b/teammanager/templates/teammanager/outreach_event_add.html
@@ -13,7 +13,7 @@
                             <input required type="text" class="form-control" name="name" id="event_name">
                         </div>
                         <div class="form-group">
-                            <label for="date">Date</label>
+                            <label for="date">Date <small>(Use yyyy-mm-dd or your system's date picker)</small></label>
                             <input required type="date" class="form-control" name="date" id="date">
                         </div>
                         <div class="form-group">
