--- a/teammanager/templates/teammanager/info_links.html
+++ b/teammanager/templates/teammanager/info_links.html
@@ -1,42 +1,44 @@
 {% extends 'teammanager/base.html' %}
 
 {% block content %}
-    <div class="row">
+  <div class="row">
     <div class="col-12 mb-3">
-        <div class="card">
-            <div class="card-body text-center">
-                <h2>Team Links</h2>
-            </div>
+      <div class="card">
+        <div class="card-body text-center">
+          <h2>Team Links</h2>
         </div>
+      </div>
     </div>
     <div class="col-sm-12 col-lg-6 mb-3">
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">Core EB Sites</h3>
-                <ul>
-                    <li><a href="https://explodingbacon.com">EB Website</a> </li>
-                    <li><a href="https://forums.explodingbacon.com">Forum</a> </li>
-                    <li><a href="https://u.explodingbacon.com">BaconU</a> </li>
-                    <li><a href="https://www.FIRSTLikeAGirl.com">FIRSTLikeAGirl</a> </li>
-                    <li><a href="https://www.SparkImagination.org">Spark Science Kits</a> </li>
-                    <li><a href="https://www.FIRSTAlliances.org">FIRST Alliances</a> </li>
-                </ul>
-            </div>
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Core EB Sites</h3>
+          <ul>
+            <li><a href="https://explodingbacon.com">EB Website</a></li>
+            <li><a href="https://forums.explodingbacon.com">Forum</a></li>
+            <li><a href="https://u.explodingbacon.com">BaconU</a></li>
+            <li><a href="https://www.FIRSTLikeAGirl.com">FIRSTLikeAGirl</a></li>
+            <li><a href="https://www.SparkImagination.org">Spark Science Kits</a></li>
+            <li><a href="https://www.FIRSTAlliances.org">FIRST Alliances</a></li>
+          </ul>
         </div>
+      </div>
     </div>
     <div class="col-sm-12 col-lg-6 mb-3">
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">Documents</h3>
-                <ul>
-                    <li><a href="https://drive.google.com/drive/u/0/folders/0B_pAHg7v4lCaM2Y5Qlg3NGszUVU">Google Drive</a> </li>
-                    <li><a href="https://photos.app.goo.gl/5mY4NnjZXM4rZabk7">2019-20 Google Photos</a> </li>
-                    <li><a href="https://docs.google.com/spreadsheets/d/1pPHeeOaOLfWoh_ftpNQ7SLtJxltNmhcDBxNcf4aqA8Y/edit?usp=sharing">Real-Time Budget</a> </li>
-                    <li><a href="http://www.explodingbacon.com/share/Exploding-Bacon-Marketing-Packet-2018-19.pdf">Marketing Packet</a> </li>
-                    <li><a href="https://docs.google.com/spreadsheets/d/18ghCxaLnNlORuEWPdtkb055wPmu4WAlca0wgeqS3kDc/edit?usp=sharing">Outreach Hours Log</a> </li>
-                </ul>
-            </div>
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Documents</h3>
+          <ul>
+            <li><a href="https://drive.google.com/drive/u/0/folders/0B_pAHg7v4lCaM2Y5Qlg3NGszUVU">Google Drive</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1cPqtbb8nWtPlHnKdcYPBVsJekpRVdT9lHezAs-1dZMA/edit?ts=5dd80c13#gid=0">Build Season Meal Calendar</a> </li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1pPHeeOaOLfWoh_ftpNQ7SLtJxltNmhcDBxNcf4aqA8Y/edit?usp=sharing">Real-Time Budget</a></li>
+            <li><a href="https://photos.app.goo.gl/5mY4NnjZXM4rZabk7">2019-20 Google Photos</a></li>
+            <li><a href="http://www.explodingbacon.com/share/Exploding-Bacon-Marketing-Packet-2018-19.pdf">Marketing Packet</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/18ghCxaLnNlORuEWPdtkb055wPmu4WAlca0wgeqS3kDc/edit?usp=sharing">Outreach Hours Log</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/16BsCRpKdhAWAphYhCKTbpBJKFlD_m-R7B5vyg8B_XYs/edit?usp=sharing">Keyholder Opening Calendar</a></li>
+          </ul>
         </div>
+      </div>
     </div>
-    </div>
+  </div>
 {% endblock %}
