--- a/teammanager/templates/teammanager/info_links.html
+++ b/teammanager/templates/teammanager/info_links.html
@@ -33,7 +33,7 @@
             <li><a href="https://docs.google.com/spreadsheets/d/1cPqtbb8nWtPlHnKdcYPBVsJekpRVdT9lHezAs-1dZMA/edit?ts=5dd80c13#gid=0">Build Season Meal Calendar</a> </li>
             <li><a href="https://docs.google.com/spreadsheets/d/1pPHeeOaOLfWoh_ftpNQ7SLtJxltNmhcDBxNcf4aqA8Y/edit?usp=sharing">Real-Time Budget</a></li>
             <li><a href="https://docs.google.com/document/d/11CC18YMdv_nJArS9Alh6aMRqhXqeiLIrxCB36eCIIjU/edit?usp=sharing">Meeting Updates Archive </a></li>
-            <li><a href="https://photos.app.goo.gl/5mY4NnjZXM4rZabk7">2019-20 Google Photos</a></li>
+            <li><a href="https://photos.google.com/share/AF1QipPCA8uGKcS5MoF_i4mVTQH6K3jExEA7V8x1Vkhp_NK7CU-q38Ih3U6n4CR0MrUTjg?key=ek04azBBTlhmZWgxdEJpZnBTcUFKMTBYbWVQX0hn">2019-20 Google Photos</a></li>
             <li><a href="http://www.explodingbacon.com/share/Exploding-Bacon-Marketing-Packet-2018-19.pdf">Marketing Packet</a></li>
             <li><a href="https://docs.google.com/spreadsheets/d/18ghCxaLnNlORuEWPdtkb055wPmu4WAlca0wgeqS3kDc/edit?usp=sharing">Outreach Hours Log</a></li>
             <li><a href="https://docs.google.com/spreadsheets/d/1WvXVHNBcoO2UUMdl79onOb4nTo8yyxasu6Jn3YtptLg/edit?usp=sharing">Keyholder Opening Calendar</a></li>
