--- a/teammanager/templates/teammanager/directory_staff.html
+++ b/teammanager/templates/teammanager/directory_staff.html
@@ -13,7 +13,7 @@
       <tbody>
       {% for row in members %}
         {% if request.user.is_staff %}
-          <tr onclick="window.location='{% url 'man:member' id=row.0.id %}'">
+          <tr onclick="window.open('{% url 'man:member' id=row.0.id %}', '_blank')">
             {% else %}
           <tr>
         {% endif %}
