Update team links

--- a/teammanager/templates/teammanager/info_links.html
+++ b/teammanager/templates/teammanager/info_links.html
@@ -16,7 +16,6 @@
           <ul>
             <li><a href="https://explodingbacon.com">EB Website</a></li>
             <li><a href="https://forums.explodingbacon.com">Forum</a></li>
-            <li><a href="https://u.explodingbacon.com">BaconU</a></li>
             <li><a href="https://www.FIRSTLikeAGirl.com">FIRSTLikeAGirl</a></li>
             <li><a href="https://www.SparkImagination.org">Spark Science Kits</a></li>
             <li><a href="https://www.FIRSTAlliances.org">FIRST Alliances</a></li>
@@ -30,13 +29,11 @@
           <h3 class="card-title">Documents</h3>
           <ul>
             <li><a href="https://drive.google.com/drive/u/0/folders/0B_pAHg7v4lCaM2Y5Qlg3NGszUVU">Google Drive</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1cPqtbb8nWtPlHnKdcYPBVsJekpRVdT9lHezAs-1dZMA/edit?ts=5dd80c13#gid=0">Build Season Meal Calendar</a> </li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1pPHeeOaOLfWoh_ftpNQ7SLtJxltNmhcDBxNcf4aqA8Y/edit?usp=sharing">Real-Time Budget</a></li>
-            <li><a href="https://docs.google.com/document/d/11CC18YMdv_nJArS9Alh6aMRqhXqeiLIrxCB36eCIIjU/edit?usp=sharing">Meeting Updates Archive </a></li>
-            <li><a href="https://photos.google.com/share/AF1QipPCA8uGKcS5MoF_i4mVTQH6K3jExEA7V8x1Vkhp_NK7CU-q38Ih3U6n4CR0MrUTjg?key=ek04azBBTlhmZWgxdEJpZnBTcUFKMTBYbWVQX0hn">2019-20 Google Photos</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1UyTKnvm09Y4FjMgDozFhTUHJw5kwB5RiAb4E8ziWyGQ/edit">Meeting Signups</a> </li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1cPqtbb8nWtPlHnKdcYPBVsJekpRVdT9lHezAs-1dZMA/edit">Build Season Meal Calendar</a> </li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1UB73lu6MjjSYlUFmcDln3cTd7bgyhflkCLUGvFFU_MQ/edit">Real-Time Finances</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1U7o4tCzeW1n3XgMb9__vM-D_77EAiMPe5Xe0W7dFD1w/edit">Robot Budget</a></li>
             <li><a href="https://www.explodingbacon.com/wp-content/uploads/2020/01/Marketing-Packet-2020-Email-.pdf">Marketing Packet</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/18ghCxaLnNlORuEWPdtkb055wPmu4WAlca0wgeqS3kDc/edit?usp=sharing">Outreach Hours Log</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1WvXVHNBcoO2UUMdl79onOb4nTo8yyxasu6Jn3YtptLg/edit?usp=sharing">Keyholder Opening Calendar</a></li>
           </ul>
         </div>
       </div>
